--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-container">
           <div class="about-image">
-            <img src="images/desktop.png" alt="Jatin IT Specialist">
+            <img src="desktop.png" alt="Jatin IT Specialist">
           </div>
           <div class="about-content">
             <h3>IT Professional with a Passion for Technology</h3>
