--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
 
           <div class="experience-content">
             <div id="tab1" class="tab-content active">
-              <h3 class="job-title">IT Support Specialist (Technician)</h3>
+              <h3 class="job-title">Computer lab assistant (Technician)</h3>
               <p class="job-company">George Brown College</p>
               <p class="job-period">Mar 2024 - Present</p>
               <ul class="job-description">
