--- a/index.html
+++ b/index.html
@@ -1290,9 +1290,20 @@
               <p class="timeline-courses">Coursework: HTML, CSS, JavaScript, Responsive Web Design, Front-End Development, Back-End Development (PHP, Node.js), Database Management (MySQL, NOSQL), Web Hosting & Deployment, Cybersecurity for Web Development</p>
             </div>
           </div>
+
+          <div class="timeline-item timeline-right">
+            <div class="timeline-content">
+              <p class="timeline-date">Jan 2021 - March 2022</p>
+              <h3 class="timeline-title">Senior Secondary Education</h3>
+              <p class="timeline-subtitle">GMSS SCHOOL, India, HR</p>
+              <p class="timeline-courses">Coursework: Physics,Chemistry, Mathematics </p>
+            </div>
+          </div>
+          
         </div>
       </div>
     </section>
+    
 
     <!-- Certifications Section -->
     <section id="certifications">
