--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@
             </div>
           </div>
 
-          <div class="timeline-item timeline-right">
+          <div class="timeline-item timeline-left">
             <div class="timeline-content">
               <p class="timeline-date">Jan 2021 - March 2022</p>
               <h3 class="timeline-title">Senior Secondary Education</h3>
