--- a/index.html
+++ b/index.html
@@ -1295,8 +1295,8 @@
             <div class="timeline-content">
               <p class="timeline-date">Jan 2021 - March 2022</p>
               <h3 class="timeline-title">Senior Secondary Education</h3>
-              <p class="timeline-subtitle">GMSS SCHOOL, India, HR</p>
-              <p class="timeline-courses">Coursework: Physics,Chemistry, Mathematics </p>
+              <p class="timeline-subtitle">GMSS SCHOOL, India, HR(Ambala)</p>
+              <p class="timeline-courses">Coursework: Physics,Chemistry, Mathematics, Computer science </p>
             </div>
           </div>
           
