--- a/index.html
+++ b/index.html
@@ -1412,7 +1412,7 @@
   <!-- Footer -->
   <footer>
     <div class="footer-line"></div>
-    <p>© 2025 Jatin. All Rights Reserved. Designed & Built with ❤️</p>
+    <p>© 2025 Jatin. All Rights Reserved. Designed & Built with passion</p>
   </footer>
 
   <!-- Scripts -->
