--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
       <div class="container">
         <div class="hero-content">
           <div class="tag">Hello world</div>
-          <h1 class="hero-name">Hi, my name is <span>Jatin</span></h1>
+          <h1 class="hero-name">Hi, my name is Jatin</h1>
           <p class="hero-subtitle">IT Support Specialist & Network Technician with experience in system administration, hardware troubleshooting, and network infrastructure.</p>
           <div class="cta-buttons">
             <a href="#projects" class="btn btn-primary">View My Work</a>
