--- a/index.html
+++ b/index.html
@@ -978,7 +978,8 @@
         <div class="hero-content">
           <div class="tag">Hello world</div>
           <h1 class="hero-name">Hi, my name is Jatin</h1>
-          <p class="hero-subtitle">IT Support Specialist & Network Technician with experience in system administration, hardware troubleshooting, and network infrastructure.</p>
+          <p class="hero-subtitle">IT Support Specialist | Network Technician | Web & Software Developer
+Experienced in system administration, hardware troubleshooting, network infrastructure, and full-stack developer.</p>
           <div class="cta-buttons">
             <a href="#projects" class="btn btn-primary">View My Work</a>
             <a href="#contact" class="btn btn-secondary">Get In Touch</a>
