--- a/index.html
+++ b/index.html
@@ -1136,6 +1136,22 @@ Experienced in system administration, hardware troubleshooting, network infrastr
                 <li>Provided client training and support, educating end-users on proper system usage, troubleshooting techniques, and best security practices.</li>
               </ul>
             </div>
+
+             <div id="tab3" class="tab-content">
+              <h3 class="job-title">Freelance Wed Developer and Graphic Designer </h3>
+              <p class="job-company">Remote/Project based </p>
+              <p class="job-period">Jan 2021 - Present</p>
+              <ul class="job-description">
+                <li>Designed, developed, and launched fully responsive websites and web applications for 8+ clients across diverse sectors.</li>
+  <li>Engineered dynamic, SEO-optimized e-commerce platforms and corporate sites leveraging React, Node.js, and MySQL.</li>
+  <li>Built intuitive admin dashboards, booking modules, and interactive forms to enhance user experience and streamline workflows.</li>
+  <li>Delivered comprehensive graphic design solutions, including brand logos, marketing banners, promotional flyers, and high-fidelity UI mock-ups.</li>
+              </ul>
+            </div>
+          
+
+
+            
           </div>
         </div>
       </div>
@@ -1652,3 +1668,4 @@ Experienced in system administration, hardware troubleshooting, network infrastr
   </script>
 </body>
 </html>
+
