--- a/index.html
+++ b/index.html
@@ -1087,71 +1087,77 @@ Experienced in system administration, hardware troubleshooting, network infrastr
     </section>
 
     <!-- Experience Section -->
-    <section id="experience">
-      <div class="container">
-        <h2 class="section-title">Work Experience</h2>
-        <div class="experience-container">
-          <div class="experience-tabs">
-            <button class="tab-btn active" data-tab="tab1">George Brown College</button>
-            <button class="tab-btn" data-tab="tab2">Staples</button>
-            <button class="tab-btn" data-tab="tab3">Visual Protection</button>
-          </div>
+   <section id="experience">
+  <div class="container">
+    <h2 class="section-title">Work Experience</h2>
+    <div class="experience-container">
+      <div class="experience-tabs">
+        <button class="tab-btn active" data-tab="tab1">George Brown College</button>
+        <button class="tab-btn" data-tab="tab2">Staples</button>
+        <button class="tab-btn" data-tab="tab3">Visual Protection</button>
+        <button class="tab-btn" data-tab="tab4">Freelance</button>
+      </div>
 
-          <div class="experience-content">
-            <div id="tab1" class="tab-content active">
-              <h3 class="job-title">Computer lab assistant (Technician)</h3>
-              <p class="job-company">George Brown College</p>
-              <p class="job-period">Mar 2024 - Present</p>
-              <ul class="job-description">
-                <li>Delivered technical support to faculty and students by troubleshooting hardware, software, and connectivity issues.</li>
-                <li>Maintained and repaired lab equipment, ensuring optimal performance of PCs, printers, and peripheral devices.</li>
-                <li>Configured and installed software applications required for academic exercises and technical lab demonstrations.</li>
-                <li>Facilitated student training sessions to improve effective use of lab resources and computing technologies.</li>
-                <li>Documented lab procedures and created user-friendly troubleshooting guides for recurring technical issues.</li>
-              </ul>
-            </div>
+      <div class="experience-content">
+        <!-- George Brown -->
+        <div id="tab1" class="tab-content active">
+          <h3 class="job-title">Computer Lab Assistant (Technician)</h3>
+          <p class="job-company">George Brown College</p>
+          <p class="job-period">Mar 2024 – Present</p>
+          <ul class="job-description">
+            <li>Delivered technical support to faculty and students by troubleshooting hardware, software, and connectivity issues.</li>
+            <li>Maintained and repaired lab equipment, ensuring optimal performance of PCs, printers, and peripheral devices.</li>
+            <li>Installed and configured software applications required for academic exercises and lab demonstrations.</li>
+            <li>Facilitated student training sessions to enhance effective use of lab resources and computing technologies.</li>
+            <li>Documented procedures and created user-friendly troubleshooting guides for recurring technical issues.</li>
+          </ul>
+        </div>
 
-            <div id="tab2" class="tab-content">
-              <h3 class="job-title">Sales and Service Representative</h3>
-              <p class="job-company">Staples</p>
-              <p class="job-period">Oct 2024 - Present</p>
-              <ul class="job-description">
-                <li>Provided expert-level technical support on a wide range of products, including computers, printers, and networking devices.</li>
-                <li>Installed and maintained computer systems, printers, and peripherals to support customers with technical needs.</li>
-                <li>Collaborated with team members and managers to meet sales goals and enhance overall store performance.</li>
-                <li>Handled returns, and refunds in accordance with company policies to ensure a smooth customer experience.</li>
-                <li>Maintained up-to-date knowledge of products and services to deliver accurate recommendations and solutions.</li>
-              </ul>
-            </div>
+        <!-- Staples -->
+        <div id="tab2" class="tab-content">
+          <h3 class="job-title">Sales and Service Representative</h3>
+          <p class="job-company">Staples</p>
+          <p class="job-period">Oct 2024 – Present</p>
+          <ul class="job-description">
+            <li>Provided technical support for computers, printers, and networking devices, ensuring customer satisfaction.</li>
+            <li>Installed and maintained computer systems, printers, and peripherals for customer needs.</li>
+            <li>Collaborated with team members and management to achieve sales targets and improve overall store performance.</li>
+            <li>Processed returns and refunds in compliance with company policies, ensuring a smooth customer experience.</li>
+            <li>Maintained up-to-date product knowledge to provide accurate recommendations and tailored solutions.</li>
+          </ul>
+        </div>
 
-            <div id="tab3" class="tab-content">
-              <h3 class="job-title">Network Technician</h3>
-              <p class="job-company">Visual Protection</p>
-              <p class="job-period">Jan 2024 - Oct 2024</p>
-              <ul class="job-description">
-                <li>Installed and configured surveillance camera systems, ensuring coverage and functionality for security purposes.</li>
-                <li>Designed and implemented network infrastructure to support surveillance systems, including structured cabling, router, and switch configurations.</li>
-                <li>Diagnosed and resolved technical issues related to network connectivity, video surveillance equipment, and software integration.</li>
-                <li>Performed system maintenance and troubleshooting, ensuring uninterrupted operation of security and networking systems.</li>
-                <li>Provided client training and support, educating end-users on proper system usage, troubleshooting techniques, and best security practices.</li>
-              </ul>
-            </div>
+        <!-- Visual Protection -->
+        <div id="tab3" class="tab-content">
+          <h3 class="job-title">Network Technician</h3>
+          <p class="job-company">Visual Protection</p>
+          <p class="job-period">Jan 2024 – Oct 2024</p>
+          <ul class="job-description">
+            <li>Installed and configured surveillance camera systems, ensuring comprehensive coverage and functionality.</li>
+            <li>Designed and implemented network infrastructure for surveillance systems, including cabling, routers, and switch configurations.</li>
+            <li>Diagnosed and resolved technical issues related to network connectivity, video equipment, and software integration.</li>
+            <li>Performed routine maintenance and troubleshooting to ensure uninterrupted operation of security systems.</li>
+            <li>Provided client training and support on system usage, troubleshooting, and best security practices.</li>
+          </ul>
+        </div>
 
-             <div id="tab4" class="tab-content">
-              <h3 class="job-title">Freelance Wed Developer and Graphic Designer </h3>
-              <p class="job-company">Remote/Project based </p>
-              <p class="job-period">Jan 2021 - Present</p>
-              <ul class="job-description">
-                <li>Designed, developed, and launched fully responsive websites and web applications for 8+ clients across diverse sectors.</li>
-               <li>Engineered dynamic, SEO-optimized e-commerce platforms and corporate sites leveraging React, Node.js, and MySQL.</li>
-               <li>Built intuitive admin dashboards, booking modules, and interactive forms to enhance user experience and streamline workflows.</li>
-               <li>Delivered comprehensive graphic design solutions, including brand logos, marketing banners, promotional flyers, and high-fidelity UI mock-ups.</li>
-              </ul>
-            </div>
-          </div>
+        <!-- Freelance -->
+        <div id="tab4" class="tab-content">
+          <h3 class="job-title">Freelance Web Developer & Graphic Designer</h3>
+          <p class="job-company">Remote / Project-Based</p>
+          <p class="job-period">Jan 2021 – Present</p>
+          <ul class="job-description">
+            <li>Designed, developed, and launched fully responsive websites and web applications for 8+ clients across diverse sectors.</li>
+            <li>Built SEO-optimized e-commerce platforms and corporate sites using React, Node.js, and MySQL.</li>
+            <li>Developed intuitive admin dashboards, booking modules, and interactive forms to streamline workflows.</li>
+            <li>Delivered comprehensive graphic design solutions, including brand logos, marketing banners, promotional flyers, and high-fidelity UI mock-ups.</li>
+          </ul>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
+</section>
+
 
     <!-- Projects Section -->
     <section id="projects">
@@ -1664,5 +1670,6 @@ Experienced in system administration, hardware troubleshooting, network infrastr
   </script>
 </body>
 </html>
+
 
 
