--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
           <div class="tag">Hello world</div>
           <h1 class="hero-name">Hi, my name is Jatin</h1>
           <p class="hero-subtitle">IT Support Specialist | Network Technician | Web & Software Developer
-Experienced in system administration, hardware troubleshooting, full-stack development, and designing robust network infrastructure.</p>
+Skilled in system administration, hardware and software troubleshooting, full-stack development, and designing robust network infrastructure.</p>
           <div class="cta-buttons">
             <a href="#projects" class="btn btn-primary">View My Work</a>
             <a href="#contact" class="btn btn-secondary">Get In Touch</a>
@@ -1670,6 +1670,7 @@ Experienced in system administration, hardware troubleshooting, full-stack devel
   </script>
 </body>
 </html>
+
 
 
 
