--- a/index.html
+++ b/index.html
@@ -1134,19 +1134,6 @@ Skilled in system administration, hardware and software troubleshooting, full-st
       </div>
 
       <div class="experience-content">
-        <!-- George Brown -->
-        <div id="tab1" class="tab-content active">
-          <h3 class="job-title">Computer Lab Assistant (Technician)</h3>
-          <p class="job-company">George Brown College</p>
-          <p class="job-period">Mar 2024 – Present</p>
-          <ul class="job-description">
-            <li>Delivered technical support to faculty and students by troubleshooting hardware, software, and connectivity issues.</li>
-            <li>Maintained and repaired lab equipment, ensuring optimal performance of PCs, printers, and peripheral devices.</li>
-            <li>Installed and configured software applications required for academic exercises and lab demonstrations.</li>
-            <li>Facilitated student training sessions to enhance effective use of lab resources and computing technologies.</li>
-            <li>Documented procedures and created user-friendly troubleshooting guides for recurring technical issues.</li>
-          </ul>
-        </div>
 
         <!-- Staples -->
         <div id="tab2" class="tab-content">
@@ -1159,6 +1146,20 @@ Skilled in system administration, hardware and software troubleshooting, full-st
             <li>Collaborated with team members and management to achieve sales targets and improve overall store performance.</li>
             <li>Processed returns and refunds in compliance with company policies, ensuring a smooth customer experience.</li>
             <li>Maintained up-to-date product knowledge to provide accurate recommendations and tailored solutions.</li>
+          </ul>
+        </div>
+
+         <!-- George Brown -->
+        <div id="tab1" class="tab-content active">
+          <h3 class="job-title">Computer Lab Assistant (Technician)</h3>
+          <p class="job-company">George Brown College</p>
+          <p class="job-period">Mar 2024 – Aug 2025</p>
+          <ul class="job-description">
+            <li>Delivered technical support to faculty and students by troubleshooting hardware, software, and connectivity issues.</li>
+            <li>Maintained and repaired lab equipment, ensuring optimal performance of PCs, printers, and peripheral devices.</li>
+            <li>Installed and configured software applications required for academic exercises and lab demonstrations.</li>
+            <li>Facilitated student training sessions to enhance effective use of lab resources and computing technologies.</li>
+            <li>Documented procedures and created user-friendly troubleshooting guides for recurring technical issues.</li>
           </ul>
         </div>
 
@@ -1705,6 +1706,7 @@ Skilled in system administration, hardware and software troubleshooting, full-st
   </script>
 </body>
 </html>
+
 
 
 
