--- a/index.html
+++ b/index.html
@@ -1106,14 +1106,11 @@ Skilled in system administration, hardware and software troubleshooting, full-st
 <span class="skill-tag">AWS EC2</span>
 <span class="skill-tag">AWS IAM</span>
 <span class="skill-tag">Azure Virtual Machines</span>
-<span class="skill-tag">Azure Active Directory</span>
 <span class="skill-tag">Cloud Networking</span>
 <span class="skill-tag">Cloud Backup & Recovery</span>
-<span class="skill-tag">Cloud Security</span>
 <span class="skill-tag">Docker Containers</span>
 <span class="skill-tag">Kubernetes (Basics)</span>
 <span class="skill-tag">Cloud Monitoring (CloudWatch / Azure Monitor)</span>
-<span class="skill-tag">IaaS & PaaS Deployment</span>
 
             </div>
           </div>
@@ -1127,8 +1124,8 @@ Skilled in system administration, hardware and software troubleshooting, full-st
     <h2 class="section-title">Work Experience</h2>
     <div class="experience-container">
       <div class="experience-tabs">
-        <button class="tab-btn active" data-tab="tab1">George Brown College</button>
         <button class="tab-btn" data-tab="tab2">Staples</button>
+        <button class="tab-btn active" data-tab="tab1">George Brown College</button>
         <button class="tab-btn" data-tab="tab3">Visual Protection</button>
         <button class="tab-btn" data-tab="tab4">Freelance</button>
       </div>
@@ -1151,7 +1148,7 @@ Skilled in system administration, hardware and software troubleshooting, full-st
 
          <!-- George Brown -->
         <div id="tab1" class="tab-content active">
-          <h3 class="job-title">Computer Lab Assistant (Technician)</h3>
+          <h3 class="job-title">Computer Lab Assistant (IT support)</h3>
           <p class="job-company">George Brown College</p>
           <p class="job-period">Mar 2024 – Aug 2025</p>
           <ul class="job-description">
@@ -1706,6 +1703,7 @@ Skilled in system administration, hardware and software troubleshooting, full-st
   </script>
 </body>
 </html>
+
 
 
 
